@@ -1262,14 +1262,16 @@ checkprogram    : CHECKPROGRAM SERVICENAME PATHTOK argumentlist programtimeout {
                         check_exec(c->arg[0]);
                         createservice(Service_Program, $<string>2, NULL, check_program);
                         current->program->timeout = $<number>5;
-                        current->program->output = StringBuffer_create(64);
+                        current->program->lastOutput = StringBuffer_create(64);
+                        current->program->inprogressOutput = StringBuffer_create(64);
                  }
                 | CHECKPROGRAM SERVICENAME PATHTOK argumentlist useroptionlist programtimeout {
                         command_t c = command; // Current command
                         check_exec(c->arg[0]);
                         createservice(Service_Program, $<string>2, NULL, check_program);
                         current->program->timeout = $<number>6;
-                        current->program->output = StringBuffer_create(64);
+                        current->program->lastOutput = StringBuffer_create(64);
+                        current->program->inprogressOutput = StringBuffer_create(64);
                  }
                 ;
 
